fix: Changed css so that map is visible on smaller displays

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 		<h1>Explore a new neighborhood</h1>
 		<div>
 			<input id="show-listings" type="button" value="Show Markers">
+			<br>
 			<input id="hide-listings" type="button" value="Hide Markers">
+			<br>
 			<input id="delete-listings" type="button" value="Delete Markers">
+			<br>
 			<form id="poiTypes" action="">
 				<input type="radio" name="type" value="restaurant">Restaurants<br>
 				<input type="radio" name="type" value="bar">Bar<br>
@@ -45,7 +48,7 @@
         
 		</div>
 	</div>
-	<div id="map" height="100%"></div>
+	<div id="map"></div>
 </div>
 <script src="js/libs/jquery.min.js"></script>
 <script async defer src="js/app.js"></script>
