--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Neighborhood Search App</title>
 	<meta name="viewport" content="initial-scale=1.0">
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 <div class="container">
@@ -51,7 +51,7 @@
 	<div id="map"></div>
 </div>
 <script src="js/libs/jquery.min.js"></script>
-<script async defer src="js/app.js"></script>
+<script async defer src="js/app2.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry,places&key=AIzaSyBI73nUwv6N-UOQcpIA7_B9ZwMggXHKMSw&callback=initMap"></script>
 <div>
 
