--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div id="map"></div>
 </div>
 <script src="js/libs/jquery.min.js"></script>
-<script async defer src="js/app2.js"></script>
+<script async defer src="js/app.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry,places&key=AIzaSyBI73nUwv6N-UOQcpIA7_B9ZwMggXHKMSw&callback=initMap"></script>
 <div>
 
